# M.O.R.G.

./: .gitignore  README.md  pyproject.toml
logs/: MORG.log.1
misc_scripts/: forever.py  messaging_service.py  modules.py  play sound.py  random test.py  send_sms.py  switch.py  test lights.py  test time.py  test2.py  text.py
morg/: _flask.py  _main.py  constants.py  events_door.py  events_ibm.py  events_office.py  events_sound.py  events_sports.py  events_text.py  events_weather.py  events_wss.py  logger.py  stage_trigger.py  test.py  utils.py
ssml_files/: x_afternoonwelcomeback1  x_afternoonwelcomeback2  x_anycompany  x_anyplans  x_brightlight  x_degrees  x_dimlight  x_enjoyweekendweather  x_eveningwelcomeback1  x_eveningwelcomeback2  x_fridayheresmusic  x_fridayhowsmusic  x_fridaymorning  x_goodafternoon_g  x_goodevening_g  x_goodmorning_g  x_heressomemusic  x_howssomemusic  x_howwasyourafternoon  x_lightson  x_mondaymorning  x_morninggreatday  x_morninghadfun  x_morningproductive  x_morningproductiveday  x_morningsleptwell  x_morningwelcomeback1  x_morningwelcomeback2  x_mrchambers_g  x_productiveday  x_rainchance  x_saturdayheresmusic  x_saturdayhowsmusic  x_saturdaylow  x_saturdaysequence  x_sundaylow  x_temphigh  x_templow  x_temprightnow  x_thursdaymorning  (+8 more)
v1.0/: MORG_v1.0.py
v1.1/: MORG_v1.1.py
v1.4/: MORG_v1.4.py
v1.5/: MORG_v1.5.py
v2.0/: MORG_v2.0.py
v3.0/: constants_sound.py  constants_time.py  logger.py  main.py  smartthings.py  stage_trigger.py  state_events.py  test.py  text_service.py  u.py
v4.0/: constants_sound.py  main.py  test.py  (+4 more)
(+121 files in other folders)
