[tool.poetry]
name = "m.o.r.g."
version = "0.1.0"
description = ""
authors = ["kuchambers <kuzie.chambers@changehealthcare.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
ibm-cloud-sdk-core = "*"
ibm-watson = "*"
pysndfx = "*"
requests = "*"
scipy = "*"
simpleaudio = "*"
sounddevice = "*"
sox = "*"
twilio = "*"
wikipedia = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
